@@ -6,11 +6,6 @@ COPY pom.xml .
 
 RUN mvn package
 
-RUN apk --update add tzdata && \
-    cp /usr/share/zoneinfo/Asia/Hong_Kong /etc/localtime && \
-    apk del tzdata && \
-    rm -rf /var/cache/apk/*
-
-ADD target/watch-order-rest-0.0.1.jar /app.jar
+ADD ./target/watch-order-rest-0.0.1.jar /app.jar
 RUN sh -c 'touch /app.jar'
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom -Xmx1024m -XX:+UseConcMarkSweepGC","-jar","/app.jar"]
+ENTRYPOINT ["java",,"-jar","/app.jar"]
